# rustcheck

./: .gitignore  Cargo.toml  README.md
src/: display.rs  events.rs  main.rs  parser.rs  watch.rs
