[package]
name = "rustcheck"
version = "0.1.0"
authors = ["Hagsteel <me@hagsteel.com>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.12.0", default-features = false, features = ["crossterm"] }
crossterm = "0.18.0"
